--- a/templates/wordpress/nginx.conf.j2
+++ b/templates/wordpress/nginx.conf.j2
@@ -7,7 +7,7 @@ server {
     listen [::]:80;
     server_name _;
         # return 301 https:$host$request_uri;
-    root /var/www/html;
+    root {{wp_path}};
         index index.html index.php;
         location / {
                 try_files $uri $uri/ /index.php$is_args$args;
